check_errors_utf8.txt
docker :     Updating crates.io index
Au caractère Ligne:1 : 1
+ docker run --rm -v "C:\Users\MICHEL\Desk
top\ProDesign\backend:/app" - ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecifie 
   d: (    Updating crates.io index:Stri  
  ng) [], RemoteException
    + FullyQualifiedErrorId : NativeComma 
   ndError
 
 Downloading crates ...
  Downloaded ab_glyph_rasterizer v0.1.10
  Downloaded adler2 v2.0.1
  Downloaded atomic-waker v1.1.2
  Downloaded bit_field v0.10.3
  Downloaded checked_int_cast v1.0.0
  Downloaded cfg-if v1.0.4
  Downloaded owned_ttf_parser v0.25.1
  Downloaded ab_glyph v0.2.32
  Downloaded openssl-macros v0.1.1
  Downloaded idna_adapter v1.2.1
  Downloaded md5 v0.7.0
  Downloaded hyper-tls v0.5.0
  Downloaded fnv v1.0.7
  Downloaded color_quant v1.1.0
  Downloaded zerofrom-derive v0.1.6
  Downloaded openssl-probe v0.2.1
  Downloaded pin-utils v0.1.0
  Downloaded percent-encoding v2.3.2
  Downloaded itoa v1.0.18
  Downloaded num-iter v0.1.45
  Downloaded futures-task v0.3.32
  Downloaded futures-core v0.3.32
  Downloaded form_urlencoded v1.2.2
  Downloaded num-conv v0.2.0
  Downloaded mime v0.3.17
  Downloaded lazy_static v1.5.0
  Downloaded http-range-header v0.4.2
  Downloaded httpdate v1.0.3
  Downloaded http-body v1.0.1
  Downloaded lebe v0.5.3
  Downloaded foreign-types v0.3.2
  Downloaded equivalent v1.0.2
  Downloaded futures-sink v0.3.32
  Downloaded errno v0.3.14
  Downloaded time-core v0.1.8
  Downloaded zerofrom v0.1.6
  Downloaded stable_deref_trait v1.2.1
  Downloaded tower-layer v0.3.3
  Downloaded linked-hash-map v0.5.6
  Downloaded byteorder v1.5.0
  Downloaded tower-service v0.3.3
  Downloaded http-body-util v0.1.3
  Downloaded matchit v0.7.3
  Downloaded native-tls v0.2.18
  Downloaded try-lock v0.2.5
  Downloaded utf8_iter v1.0.4
  Downloaded serde_urlencoded v0.7.1
  Downloaded crossbeam-deque v0.8.6
  Downloaded axum-core v0.4.5
  Downloaded tokio-native-tls v0.3.1
  Downloaded pin-project-lite v0.2.17
  Downloaded writeable v0.6.2
  Downloaded zerovec-derive v0.11.2
  Downloaded litemap v0.8.1
  Downloaded fdeflate v0.3.7
  Downloaded zune-inflate v0.2.54
  Downloaded bytemuck v1.25.0
  Downloaded bitflags v2.11.0
  Downloaded synstructure v0.13.2
  Downloaded iana-time-zone v0.1.65
  Downloaded crossbeam-epoch v0.9.18
  Downloaded crc32fast v1.5.0
  Downloaded tracing-log v0.2.0
  Downloaded tokio-macros v2.6.1
  Downloaded signal-hook-registry v1.4.8
  Downloaded rustversion v1.0.22
  Downloaded futures-channel v0.3.32
  Downloaded http-body v0.4.6
  Downloaded autocfg v1.5.0
  Downloaded unicase v2.9.0
  Downloaded shlex v1.3.0
  Downloaded nu-ansi-term v0.50.3
  Downloaded sync_wrapper v0.1.2
  Downloaded num-integer v0.1.46
  Downloaded mime_guess v2.0.5
  Downloaded find-msvc-tools v0.1.9
  Downloaded either v1.15.0
  Downloaded displaydoc v0.2.5
  Downloaded deranged v0.5.8
  Downloaded ipnet v2.12.0
  Downloaded lock_api v0.4.14
  Downloaded arrayvec v0.7.6
  Downloaded scopeguard v1.2.0
  Downloaded bitflags v1.3.2
  Downloaded slab v0.4.12
  Downloaded tinystr v0.8.2
  Downloaded rustls-pemfile v1.0.4
  Downloaded icu_provider v2.1.1
  Downloaded walkdir v2.5.0
  Downloaded bytes v1.11.1
  Downloaded zmij v1.0.21
  Downloaded pkg-config v0.3.32
  Downloaded simd-adler32 v0.3.8
  Downloaded miniz_oxide v0.8.9
  Downloaded tiny-skia-path v0.11.4
  Downloaded icu_normalizer_data v2.1.1
  Downloaded tracing-attributes v0.1.31
  Downloaded sharded-slab v0.1.7
  Downloaded half v2.7.1
  Downloaded serde_derive v1.0.228
  Downloaded icu_collections v2.1.1
  Downloaded smallvec v1.15.1
  Downloaded flate2 v1.1.9
  Downloaded cc v1.2.57
  Downloaded base64 v0.21.7
  Downloaded once_cell v1.21.4
  Downloaded num-rational v0.3.2
  Downloaded icu_locale_core v2.1.1
  Downloaded unicode-ident v1.0.24
  Downloaded socket2 v0.5.10
  Downloaded tracing-core v0.1.36
  Downloaded mio v1.1.1
  Downloaded memchr v2.8.0
  Downloaded hyper-util v0.1.20
  Downloaded http v1.4.0
  Downloaded http v0.2.12
  Downloaded indexmap v2.13.0
  Downloaded socket2 v0.6.3
  Downloaded zerotrie v0.2.3
  Downloaded serde_core v1.0.228
  Downloaded qrcode v0.12.0
  Downloaded combine v4.6.7
  Downloaded socket2 v0.4.10
  Downloaded ryu v1.0.23
  Downloaded weezl v0.1.12
  Downloaded qoi v0.4.1
  Downloaded uuid v1.22.0
  Downloaded rayon-core v1.13.0
  Downloaded serde v1.0.228
  Downloaded url v2.5.8
  Downloaded h2 v0.3.27
  Downloaded zerocopy-derive v0.8.47
  Downloaded tower-http v0.5.2
  Downloaded zerovec v0.11.5
  Downloaded ttf-parser v0.19.2
  Downloaded reqwest v0.11.27
  Downloaded owned_ttf_parser v0.19.0
  Downloaded ttf-parser v0.25.1
  Downloaded tracing-subscriber v0.3.23
  Downloaded vcpkg v0.2.15
  Downloaded bstr v1.12.1
  Downloaded zerocopy v0.8.47
  Downloaded openssl v0.10.76
  Downloaded time v0.3.47
  Downloaded syn v2.0.117
  Downloaded tiny-skia v0.11.4
  Downloaded serde_json v1.0.149
  Downloaded redis v0.23.3
  Downloaded rayon v1.11.0
  Downloaded pom v3.4.0
  Downloaded exr v1.74.0
  Downloaded tokio-util v0.7.18
  Downloaded tracing v0.1.44
  Downloaded chrono v0.4.44
  Downloaded png v0.17.16
  Downloaded image v0.23.14
  Downloaded tower v0.5.3
  Downloaded hyper v0.14.32
  Downloaded futures-util v0.3.32
  Downloaded jpeg-decoder v0.3.2
  Downloaded icu_properties_data v2.1.2
  Downloaded idna v1.1.0
  Downloaded hyper v1.8.1
  Downloaded regex-automata v0.4.14
  Downloaded libc v0.2.183
  Downloaded axum v0.7.9
  Downloaded hashbrown v0.16.1
  Downloaded proc-macro2 v1.0.106
  Downloaded parking_lot_core v0.9.12
  Downloaded parking_lot v0.12.5
  Downloaded tokio v1.50.0
  Downloaded openssl-sys v0.9.112
  Downloaded num-traits v0.2.19
  Downloaded yoke v0.8.1
  Downloaded time-macros v0.2.27
  Downloaded thread_local v1.1.9
  Downloaded serde_path_to_error v0.1.20
  Downloaded icu_normalizer v2.1.1
  Downloaded log v0.4.29
  Downloaded getrandom v0.4.2
  Downloaded crossbeam-utils v0.8.21
  Downloaded quote v1.0.45
  Downloaded icu_properties v2.1.2
  Downloaded httparse v1.10.1
  Downloaded gif v0.13.3
  Downloaded async-trait v0.1.89
  Downloaded arrayref v0.3.9
  Downloaded foreign-types-shared v0.1.1
  Downloaded yoke-derive v0.8.1
  Downloaded want v0.3.1
  Downloaded sha1_smol v1.0.1
  Downloaded same-file v1.0.6
  Downloaded sync_wrapper v1.0.2
  Downloaded strict-num v0.1.1
  Downloaded encoding_rs v0.8.35
  Downloaded powerfmt v0.2.0
  Downloaded potential_utf v0.1.4
  Downloaded tiff v0.9.1
  Downloaded printpdf v0.7.0
  Downloaded lopdf v0.31.0
  Downloaded image v0.24.9
   Compiling httparse v1.10.1
   Compiling openssl v0.10.76
   Compiling native-tls v0.2.18
   Compiling getrandom v0.4.2
    Checking hyper v0.14.32
    Checking hyper v1.8.1
    Checking uuid v1.22.0
    Checking hyper-util v0.1.20
    Checking axum v0.7.9
    Checking tokio-native-tls v0.3.1
    Checking hyper-tls v0.5.0
    Checking reqwest v0.11.27
    Checking pro-design-backend v0.1.0 
(/app)
error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate 
`general_purpose`
   --> src/main.rs:325:20
    |
325 |     let img_data = 
general_purpose::STANDARD_NO_PAD
    |                    ^^^^^^^^^^^^^^^ 
use of unresolved module or unlinked 
crate `general_purpose`
    |
    = help: if you wanted to use a crate 
named `general_purpose`, use `cargo add 
general_purpose` to add it to your 
`Cargo.toml`
help: consider importing this module
    |
  1 + use base64::engine::general_purpose;
    |

error[E0433]: failed to resolve: use of 
unresolved module or unlinked crate 
`general_purpose`
   --> src/main.rs:327:29
    |
327 |         .unwrap_or_else(|_| general_
purpose::STANDARD.decode(clean_b64).unwrap
_or_default());
    |                             
^^^^^^^^^^^^^^^ use of unresolved module 
or unlinked crate `general_purpose`
    |
    = help: if you wanted to use a crate 
named `general_purpose`, use `cargo add 
general_purpose` to add it to your 
`Cargo.toml`
help: consider importing this module
    |
  1 + use base64::engine::general_purpose;
    |

warning: value assigned to `curr_y` is 
never read
   --> src/main.rs:850:9
    |
850 |         curr_y += txt_scale.y * 2.0;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten 
before being read?
    = note: `#[warn(unused_assignments)]` 
(part of `#[warn(unused)]`) on by default

For more information about this error, 
try `rustc --explain E0433`.
warning: `pro-design-backend` (bin 
"pro-design-backend") generated 1 warning
error: could not compile 
`pro-design-backend` (bin 
"pro-design-backend") due to 2 previous 
errors; 1 warning emitted
